roles/k8s_init/files/nfs-subdir-external-provisioner_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-subdir-external-provisioner
## testing
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: pvc-test
#   namespace: default
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi
