roles/k8s_init/files/nginx_ingress_service_public.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-controller-public
  namespace: nginx-system
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: extnet-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.1.50
spec:
  ports:
    - name: https
      protocol: TCP
      appProtocol: https
      port: 443
      targetPort: https
    - name: 22-tcp
      protocol: TCP
      port: 22
      targetPort: 22-tcp
  selector:
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
  sessionAffinity: ClientIP
  ## Set external traffic policy to: "Local" to preserve source IP on providers supporting it.
  ## Ref: https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typeloadbalancer
  externalTrafficPolicy: "Local"
