roles/k8s_init/files/skooner_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-skooner
  namespace: skooner
spec:
  rules:
  - host: skooner.hitesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skooner
            port:
              number: 80
  ingressClassName: nginx
